# RecRoomAvatarConverterForVRMAndGlb

./: .gitignore  AGENTS.md  LICENSE  README.md  README_DIST.txt  RecRoomVrmConverter.spec  build_exe.ps1  convert_recroom_avatar.py  inspect_blend_hands.py  launch_gui.pyw  pyproject.toml  recroom_converter.example.toml  recroom_converter_gui.py  recroom_to_vrm_blender.py
