[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "recroom-vrm-converter"
version = "0.1.0"
description = "Convert Rec Room avatar GLB exports into rigged GLB and VRM outputs via Blender."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
license = { text = "MIT" }
keywords = ["recroom", "vrm", "blender", "glb", "avatar"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.scripts]
recroom-vrm-converter = "convert_recroom_avatar:main"

[project.gui-scripts]
recroom-vrm-converter-gui = "recroom_converter_gui:main"

[tool.setuptools]
py-modules = ["convert_recroom_avatar", "recroom_to_vrm_blender", "recroom_converter_gui"]
